# MLA

./: .gitignore  404.html  CHANGELOG.md  CRYPTO.html  CRYPTO.md  Cargo.toml  Dockerfile  ENTRY_NAME.html  FORMAT.html  FORMAT.md  GUIDE_CLI.md  KEY_DERIVATION.html  README.md  audit.toml  build.sh  dagger.json  deny.toml  index.html  print.html  searchindex.js
.cargo/: config  config.toml
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  codeql.yml  deploy.yml  mla-transfert.yml  mla_release.yml  mlar_release.yml  publish_doc.yml  py-bindings.yml  rust.yml  sanitize.yml  scorecard.yml  test.yml
bindings/C/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  cbindgen_c.toml  cbindgen_cpp.toml  mla.h  mla.hpp
bindings/C/src/: lib.rs
bindings/C/tests/linux-gcc/: Makefile  create.c  create_fail_no_key.c  create_interleaved.c  create_manykeys.c  create_no_early_close.c  create_set_compression_level.c  create_set_compression_level_fail_invalid.c  create_stream.c  create_unicode.c
bindings/C/tests/linux-gcc-g++/: Makefile  create.c  create_fail_no_key.c  create_interleaved.c  create_manykeys.c  create_no_early_close.c  create_set_compression_level.c  create_set_compression_level_fail_invalid.c  create_stream.c  create_unicode.c  create_write_byte_by_byte.c  info.c  open.c
bindings/C/tests/windows-msvc/: mla-bindings-test.sln  mla-bindings-test.vcxproj  mla-bindings-test.vcxproj.filters  read.c
bindings/C/tests/windows-msvc/src/: main.c  read.c  write.c
bindings/python/: CHANGELOG.md  Cargo.toml  README.md  mla.pyi  pyproject.toml
bindings/python/examples/: read.py  write.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_examples.py  test_mla.py
ci/: README.md  pyproject.toml
ci/src/mla/: __init__.py  main.py
ci/tests/: test_pipeline.py
curve25519-parser/: CHANGELOG.md  Cargo.toml
curve25519-parser/src/: lib.rs
curve25519_parser/: Cargo.toml
curve25519_parser/src/: lib.rs
doc/: CRYPTO.md  ENTRY_NAME.md  FORMAT.md  KEY_DERIVATION.md  KEY_FORMAT.md  book.toml
doc/book/: 404.html  CRYPTO.html  DESIGN.html  ENTRY_NAME.html  FORMAT.html  FUZZING.html  KEY_DERIVATION.html  index.html  print.html  searchindex.js  toc.html  toc.js
doc/src/: CRYPTO.md  DESIGN.md  ENTRY_NAME.md  FORMAT.md  FUZZING.md  KEY_FORMAT.md  MIGRATION.md  SUMMARY.md
docs/: architecture.md
docs/plans/: 2026-04-06-mla-transfert-design.md  2026-04-06-mla-transfert-server-plan.md  2026-04-06-mla-transfert-web-plan.md  2026-04-06-mla-wasm-plan.md  2026-04-11-mla-cloudflare-worker.md
ed25519_parser/: Cargo.toml  test25519_2.der  test25519_2.pem  test25519_3.der  test25519_pub2.pem  test25519_pub3.der
ed25519_parser/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mla_fuzz.rs
fuzz/oss-fuzz/: Dockerfile  build.sh  project.yaml
mla/: CHANGELOG.md  Cargo.toml
mla-fuzz/: Cargo.toml
mla-fuzz-afl/: Cargo.toml
mla-fuzz-afl/src/: main.rs
mla-fuzz/src/: lib.rs
mla-transfert-server/: Cargo.toml  Dockerfile
mla-transfert-server/src/: config.rs  main.rs  purge.rs  relay.rs  signaling.rs  state.rs
mla-transfert-web/: .gitignore  GUIDE_UTILISATEUR.md  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
mla-transfert-web/public/: mla_wasm_bg.wasm  robots.txt
mla-transfert-web/src/: env.d.ts  middleware.ts
mla-transfert-web/src/components/: FileDropZone.tsx  KeyGenerator.tsx  KeyImporter.tsx  ModeSelector.tsx  PasswordInput.tsx  ReceiveForm.tsx  ReceiveSection.tsx  SendForm.tsx  ShareLink.tsx  TransferMeta.tsx  TransferProgress.tsx
mla-transfert-web/src/layouts/: Layout.astro
mla-transfert-web/src/lib/: api.ts  mla.ts  webrtc.ts
mla-transfert-web/src/pages/: 404.astro  about.astro  help.astro  index.astro
mla-transfert-web/src/pages/receive/: [id].astro
mla-transfert-web/src/styles/: global.css
mla-wasm/: Cargo.toml  README.md
mla-wasm/src/: error.rs  keygen.rs  keys.rs  lib.rs  password.rs
mla-wasm/tests/: wasm.rs
mla/benches/: bench_archive.rs
mla/src/: base64.rs  config.rs  entry.rs  errors.rs  format.rs  helpers.rs  info.rs  lib.rs
mla/src/crypto/: aesgcm.rs  ecc.rs  hash.rs  hpke.rs  hybrid.rs  hybrid_signature.rs  mlakey.rs  mlakey_parser.rs  mod.rs
mla/src/crypto/aesgcm/: aes_gcm_navs_test_vector.rs  mod.rs
mla/src/layers/: compress.rs  encrypt.rs  mod.rs  position.rs  raw.rs  signature.rs  strip_head_tail.rs  traits.rs
mla/tests/: aes_gcm_navs_test_vector.rs
mla_archive/src/: lib.rs
mla_archive/src/crypto/: aesgcm.rs  ecc.rs  mod.rs
mla_archive/src/layers/: position.rs
mlakey-parser/: CHANGELOG.md  Cargo.toml
mlakey-parser/src/: lib.rs
mlar/: CHANGELOG.md  Cargo.toml
mlar/mlar-upgrader/: Cargo.toml  README.md
mlar/mlar-upgrader/src/: main.rs
mlar/mlar-upgrader/test-data/: archive_v1.mla  archive_v1_windows.mla
mlar/src/: main.rs  privkey.rs
mlar/tests/: integration.rs
samples/: archive_v2.mla  archive_weird.mla  test25519.der  test25519_2.pem  test25519_2_pub.pem  test25519_3.pem  test25519_3_pub.pem  test25519_pub_many.pem  test_25519_pub_many.pem  test_ed25519.pem  test_ed25519_pub.der  test_ed25519_pub.pem  test_mlakey.der  test_mlakey.mlapriv  test_mlakey.mlapub  test_mlakey.pem  test_mlakey_2.der  test_mlakey_2.mlapriv  test_mlakey_2.mlapub  test_mlakey_2.pem  test_mlakey_2_pub.pem  test_mlakey_3.der  test_mlakey_3.mlapriv  test_mlakey_3.mlapub  test_mlakey_3.pem  test_mlakey_3_pub.pem  test_mlakey_archive_v2.der  test_mlakey_archive_v2.mlapriv  test_mlakey_archive_v2.mlapub  test_mlakey_archive_v2.pem  test_mlakey_archive_v2.priv.pem  test_mlakey_archive_v2_pub.pem  test_mlakey_archive_v2_receiver.mlapriv  test_mlakey_archive_v2_receiver.mlapub  test_mlakey_archive_v2_sender.mlapriv  test_mlakey_archive_v2_sender.mlapub  test_mlakey_derived.der  test_mlakey_derived.mlapriv  test_mlakey_ed.der  test_mlakey_ed_pub.der  (+14 more)
security/: ci-security-audit.md
