[workspace]

members = [
    "mla",
    "curve25519-parser",
    "mlar",
    "mla-fuzz-afl",
    "bindings/C",
]

[profile.release]
codegen-units = 1   # Use minimum codegen units for best size and runtime performances
opt-level = 'z'     # Size optimization
lto = true          # Enable Link Time Optimization
strip = true        # Removes symbols, reducing size