[workspace]

resolver = "3"
members = [
    "mla",
    "curve25519-parser",
    "mlar",
    "mla-fuzz-afl",
    "bindings/C",
]

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = {level = "deny", priority = -1}
# lints which are rather strict or have occasional false positives
pedantic = {level = "deny", priority = -1}
# new lints that are still under development
nursery = {level = "deny", priority = -1}
# lints which prevent the use of language and library features
# restriction = {level = "deny", priority = -1}
# lints for the cargo manifest
# cargo = {level = "deny", priority = -1}
# specific lints
cast_precision_loss = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must_use_candidate = "allow"
too-many-lines = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[profile.release]
codegen-units = 1   # Use minimum codegen units for best size and runtime performances
opt-level = 'z'     # Size optimization
lto = true          # Enable Link Time Optimization
strip = true        # Removes symbols, reducing size
