[workspace]
members = [
    "mla",
    "mlar",
    "mlar/mlar-upgrader",
    "bindings/C",
]
resolver = "3"

[profile.release]
codegen-units = 1   # Use minimum codegen units for best size and runtime performances
opt-level = 3       # Optimize for maximum runtime performance
lto = true          # Enable Link Time Optimization
strip = true        # Removes symbols, reducing size
