[package]
name = "curve25519-parser"
version = "0.2.0"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2018"
license = "LGPL-3.0-only"
description = "Curve25519 Parser - DER/PEM parser for OpenSSL Ed25519 / X25519 keys"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der-parser = { version = "8", default-features = false}
x25519-dalek = { version = "1", default-features = false}
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"]}
sha2 = { version = "0", default-features = false}
pem = { version = "1", default-features = false}

[dependencies.rand_core]
version = "0.6"
default-features = false

[dev-dependencies]
rand = "0.8"
