[package]
name = "curve25519_parser"
version = "0.1.0"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der-parser = "3"
# 'nom' dependency from 'der-parser'
nom = "5"
x25519-dalek = "0"
curve25519-dalek = "2"
sha2 = "0"
pem = "0"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies]
rand = "0"
