[package]
name = "mla-fuzz-afl"
version = "0.2.0"
authors = ["ANSSI <opensource@ssi.gouv.fr>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.15"
mla = { path = "../mla" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
