[package]
name = "mla-wasm"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-only"
description = "WebAssembly bindings for the MLA archive library"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mla = { path = "../mla" }
wasm-bindgen = "0.2"
js-sys = "0.3"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
