[package]
name = "mla"
version = "1.4.0"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
description = "Multi Layer Archive - A pure rust encrypted and compressed archive file format"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
rand = { version = "0.8", default-features = false, features = ["getrandom", "std"]}
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
rand_chacha = { version = "0.3", default-features = false}
brotli = { version = "7.0", default-features = false, features = ["std"]}
bitflags = { version = "2.9", default-features = false, features = ["serde"]}
byteorder = { version = "1.5", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false}
serde-big-array = { version = "0.5", default-features = false }
# Crypto needs
# Version fixed due to avoid conflict dependencies with `aes`, `aes-ctr` and `ghash`
generic-array = { version = "0.14", default-features = false}
ghash = { version = "0.5", default-features = false}
aes = { version = "0.8", default-features = false}
ctr = { version = "0.9", default-features = false}
subtle = { version = "2.6", default-features = false}
digest = { version = "0.10", default-features = false}
# ECC
x25519-dalek = { version = "2.0", default-features = false, features = ["zeroize", "static_secrets"]}
hkdf = { version = "0.12", default-features = false}
sha2 = { version = "0.10", default-features = false}
zeroize = { version = "1.8", default-features = false}
# Post-quantum
ml-kem = { version = "0.3.0-pre", default-features = false }
kem = {version = "0.3.0-pre.0", default-features = false }
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
hpke = { version = "0.12", default-features = false, features = ["alloc", "x25519"] }

[dev-dependencies]
hex-literal = { version = "1.0", default-features = false}
aes-gcm = { version = "0.10", default-features = false, features = ["aes"]}
aead = { version = "0.5", default-features = false, features = ["alloc"]}
criterion = { version = "0.5", default-features = false}
curve25519-parser = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"]}
static_assertions = { version = "1.1", default-features = false }

[features]
default = []
send = []

[[bench]]
name = "bench_archive"
harness = false
