[package]
name = "mla"
version = "1.4.0"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
description = "Multi Layer Archive - A pure rust encrypted and compressed archive file format"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"

[dependencies]
rand = { version = "0.9", default-features = false, features = ["os_rng", "std"]}
rand_chacha = { version = "0.9", default-features = false}
brotli = { version = "8.0", default-features = false, features = ["std"]}
bitflags = { version = "2.9", default-features = false, features = ["serde"]}
byteorder = { version = "1.5", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false}
# Crypto needs
# Version fixed due to avoid conflict dependencies with `aes`, `aes-ctr` and `ghash`
generic-array = { version = "0.14", default-features = false}
ghash = { version = "0.5", default-features = false}
aes = { version = "0.8", default-features = false}
ctr = { version = "0.9", default-features = false}
subtle = { version = "2.6", default-features = false}
digest = { version = "0.10", default-features = false}
# ECC
x25519-dalek = { version = "2.0", default-features = false, features = ["zeroize", "static_secrets"]}
hkdf = { version = "0.12", default-features = false}
sha2 = { version = "0.10", default-features = false}
zeroize = { version = "1.8", default-features = false}


[dev-dependencies]
hex-literal = { version = "1.0", default-features = false}
aes-gcm = { version = "0.10", default-features = false, features = ["aes"]}
aead = { version = "0.5", default-features = false, features = ["alloc"]}
criterion = { version = "0.6", default-features = false}
curve25519-parser = { path = "../curve25519-parser" }
hex = { version = "0.4", default-features = false, features = ["alloc"]}
static_assertions = { version = "1.1", default-features = false }

[features]
default = []
send = []

[[bench]]
name = "bench_archive"
harness = false

[lints]
workspace = true