[package]
name = "mlar"
description = "A wrapper around the MLA library for common usecases"
version = "1.3.0"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"

[dependencies]
clap = { version = "4.5", features = ["wrap_help"] }
glob = "0.3"
mla = { path = "../mla", version = "1" }
curve25519-parser = { path = "../curve25519-parser", version = "0.4" }
rand = "0.9"
x25519-dalek = "2.0"
humansize = {version = "2.1", features = ["impl_style"]}
hex = "0.4"
sha2 = { version = "0.10", default-features = false}
hkdf = { version = "0.12", default-features = false}
zeroize = { version = "1.8", default-features = false}
# Could be made optional / feature to enable (for binary size)
tar = "0.4"
rand_chacha = "0.9"
lru = "0.14"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
permutate = "0.3"
