[package]
name = "mlar"
description = "A wrapper around the MLA library for common use cases"
version = "2.0.0-alpha"
authors = ["ANSSI <opensource@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["wrap_help"] }
glob = "0.3"
mla = { path = "../mla", version = "2.0.0-alpha" }
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
rand = "0.9"
x25519-dalek = "2.0"
humansize = {version = "2.1", features = ["impl_style"]}
hex = "0.4"
sha2 = { version = "0.10", default-features = false}
hkdf = { version = "0.12", default-features = false}
zeroize = { version = "1.8", default-features = false}
# Could be made optional / feature to enable (for binary size)
tar = "0.4"
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
rand_chacha = "0.9"
lru = "0.16"
ml-kem = "0.3.0-pre"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
permutate = "0.3"
winapi = { version = "0.3", features = ["winbase"] }
