[package]
name = "mlar"
description = "A wrapper around the MLA library for common use cases"
version = "2.0.0-alpha"
authors = ["ANSSI <opensource@ssi.gouv.fr>"]
edition = "2024"
license = "LGPL-3.0-only"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["wrap_help"] }
glob = "0.3"
mla = { path = "../mla", version = "2.0.0-alpha" }
hex = "0.4"
sha2 = { version = "0.10", default-features = false}
rustix = { version = "1.1.2", default-features = false, features = ["fs"] }
# Could be made optional / feature to enable (for binary size)
tar = "0.4"
clru = "0.6.1"

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
permutate = "0.3"
rand = "0.9"
# Wait that all MLA dependencies upgrade below crate to do it too as there is a trait modification (CryptoRngCore -> CryptoRng + RngCore)
rand_chacha = "0.9"
winapi = { version = "0.3", features = ["winbase"] }
