[package]
name = "mla-bindings-c"
version = "1.0.0"
authors = ["Matthieu Buffet <matthieu.buffet@ssi.gouv.fr>","Camille Mougey <camille.mougey@ssi.gouv.fr>"]
edition = "2018"

[lib]
name = "mla"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mla = { path = "../../mla", version = "1" }
curve25519-parser = { version = "0.4", default-features = false }

