[package]
name = "mla-bindings-c"
version = "2.0.0-alpha"
authors = ["Matthieu Buffet <matthieu.buffet@ssi.gouv.fr>","ANSSI <opensource@ssi.gouv.fr>"]
edition = "2024"

[lib]
name = "mla"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mla = { path = "../../mla", version = "2.0.0-alpha" }

[lints]
workspace = true