[package]
name = "pymla"
version = "0.2.0"
edition = "2024"
authors = ["Camille Mougey <camille.mougey@ssi.gouv.fr>"]
license = "LGPL-3.0-only"
description = "Multi Layer Archive - A pure rust encrypted and compressed archive file format"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"
readme = "../../README.md"

# Avoid cargo feature unification, which might broke other build in the workspace
[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24"
mla = { version = "1", features = ["send"], path = "../../mla"}
ml-kem = "0.3.0-pre"
x25519-dalek = "2.0"
mlakey-parser = { path = "../../mlakey-parser", version = "0.1" }
