[package]
name = "pymla"
version = "0.5.0"
edition = "2024"
authors = ["ANSSI <opensource@ssi.gouv.fr>"]
license = "LGPL-3.0-only"
description = "Multi Layer Archive - A pure rust encrypted and compressed archive file format"
homepage = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"

# Avoid cargo feature unification, which might broke other build in the workspace
[workspace]
members = ["."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymla"
crate-type = ["cdylib"]

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = {level = "deny", priority = -1}
arithmetic_side_effects = {level = "deny", priority = -1}
# lints which are rather strict or have occasional false positives
pedantic = {level = "deny", priority = -1}
# new lints that are still under development
# nursery = {level = "deny", priority = -1}
# lints which prevent the use of language and library features
# restriction = {level = "deny", priority = -1}
# lints for the cargo manifest
# cargo = {level = "deny", priority = -1}
# specific lints
cast_precision_loss = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must_use_candidate = "allow"
too-many-lines = "allow"

[dependencies]
pyo3 = "0.27"
mla = { version = "2.0.0-beta", features = ["send"], path = "../../mla"}
