[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "mla-archive"
description = "Bindings for MLA Archive manipulation"
authors = [
    { name="ANSSI", email="opensource@ssi.gouv.fr" },
]
requires-python = ">=3.11"
keywords = ["rust", "compression", "encryption", "signature", "pqc"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
documentation = "https://github.com/ANSSI-FR/MLA"
repository = "https://github.com/ANSSI-FR/MLA"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mla"
